--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,7 @@ spring.sql.init.data-locations=classpath:db/data.sql
 spring.jpa.defer-datasource-initialization=true
 # mustache request expose
 spring.mustache.servlet.expose-request-attributes=true
+# mustache session expose
+spring.mustache.servlet.expose-session-attributes=true
 # Sql formatter
 spring.jpa.properties.hibernate.format_sql=true
